# sdd-coders

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
agents/: database-engineer.md  design-engineer.md  devops-engineer.md  platform-engineer.md  security-auditor.md
docs/: how-it-works.md
scripts/: sync_plugin.py
skills/sdd-constitution/: SKILL.md
skills/sdd-deploy/: SKILL.md
skills/sdd-implement/: SKILL.md
skills/sdd-import/: SKILL.md
skills/sdd-interview/: SKILL.md
skills/sdd-specify/: SKILL.md
skills/sdd-tasks/: SKILL.md
skills/sdd-verify/: SKILL.md
src/sdd_coders/: __init__.py  __main__.py  adopt.py  cli.py  scaffold.py
src/sdd_coders/assets/adopt/.claude/: settings.json
src/sdd_coders/assets/adopt/.claude/hooks/: pre-commit-gate.sh
src/sdd_coders/assets/adopt/specs/: README.md  constitution.md
src/sdd_coders/assets/adopt/specs/functional/: _template.md
src/sdd_coders/template/: .copier-answers.yml.jinja  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md.jinja  Makefile.jinja  README.md.jinja  copier.yml
src/sdd_coders/template/.claude/: settings.json
src/sdd_coders/template/.claude/agents/: backend-engineer.md  design-engineer.md  docs-writer.md  frontend-engineer.md  orchestrator.md  product-analyst.md  test-engineer.md
src/sdd_coders/template/.claude/hooks/: pre-commit-gate.sh  secret-guard.sh
src/sdd_coders/template/.claude/skills/sdd-design/: SKILL.md
src/sdd_coders/template/.claude/skills/sdd-docs/: SKILL.md
src/sdd_coders/template/.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
src/sdd_coders/template/backend/: .dockerignore  README.md  alembic.ini  mkdocs.yml  openapi.json  pyproject.toml
src/sdd_coders/template/backend/alembic/: env.py
src/sdd_coders/template/backend/alembic/versions/: 0001_initial.py  0002_email_verified_ip_bans.py
src/sdd_coders/template/backend/app/: main.py
src/sdd_coders/template/backend/app/api/: __init__.py  deps.py
src/sdd_coders/template/backend/app/api/routes/: admin.py  auth.py  health.py  me.py  projects.py
src/sdd_coders/template/backend/app/core/: __init__.py  client_ip.py  config.py  db.py  limiter.py  logging.py  security.py
src/sdd_coders/template/backend/app/db/: __init__.py  rls.py
src/sdd_coders/template/backend/app/middleware/: ip_ban.py
src/sdd_coders/template/backend/app/models/: __init__.py  audit.py  base.py  consent.py  ip_ban.py  project.py  refresh_token.py  user.py
src/sdd_coders/template/backend/app/schemas/: admin.py  auth.py  me.py  project.py
src/sdd_coders/template/backend/app/scripts/: __init__.py  create_admin.py
src/sdd_coders/template/backend/app/services/: __init__.py  abuse.py  audit.py  auth.py  turnstile.py  verification.py
src/sdd_coders/template/backend/app/services/email/: __init__.py  base.py  factory.py  memory.py  resend.py  smtp.py
src/sdd_coders/template/backend/docs/: api.md  erd.md  index.md
src/sdd_coders/template/backend/scripts/: dump_openapi.py  gen_erd.py
src/sdd_coders/template/backend/tests/: conftest.py
src/sdd_coders/template/backend/tests/integration/: conftest.py  test_abuse.py  test_admin.py  test_auth.py  test_create_admin.py  test_health_ready.py  test_ip_ban.py  test_me.py  test_projects.py  test_rate_limit.py  test_rls.py
src/sdd_coders/template/backend/tests/unit/: test_app.py  test_client_ip.py  test_config.py  test_email.py  test_ip_ban_unit.py  test_limiter.py  test_logging.py  test_security.py  test_turnstile.py  test_verification.py
src/sdd_coders/template/docs/guides/: setup.md
src/sdd_coders/template/frontend/: biome.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
src/sdd_coders/template/frontend/.storybook/: main.ts  preview.tsx
src/sdd_coders/template/frontend/app/: globals.css  globals.css.jinja  layout.tsx  page.tsx
src/sdd_coders/template/frontend/components/: account-data.test.tsx  account-data.tsx  admin-users.test.tsx  admin-users.tsx  auth-form.test.tsx  auth-form.tsx  change-password-form.test.tsx  change-password-form.tsx  consent-banner.test.tsx  consent-banner.tsx  google-analytics.test.tsx  google-analytics.tsx  logout-button.test.tsx  logout-button.tsx  privacy-settings.test.tsx  privacy-settings.tsx  project-list.test.tsx  project-list.tsx  theme-toggle.stories.tsx  theme-toggle.test.tsx  theme-toggle.tsx
src/sdd_coders/template/frontend/e2e/: smoke.spec.ts
src/sdd_coders/template/frontend/lib/: cn.test.ts
src/sdd_coders/template/infra/: docker-compose.yml  docker-compose.yml.jinja  secrets.example.env
src/sdd_coders/template/infra/ansible/: inventory.ini.example
src/sdd_coders/template/infra/docker/: backend.Dockerfile  frontend.Dockerfile
src/sdd_coders/template/infra/monitoring/: README.md  docker-compose.yml  prometheus.yml  promtail-config.yml
src/sdd_coders/template/infra/postgres/: init.sql
src/sdd_coders/template/infra/scripts/: backup.sh  deploy.sh
src/sdd_coders/template/infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
src/sdd_coders/template/specs/: 00-product-brief.md  00-product-brief.md.jinja  README.md  constitution.md
src/sdd_coders/template/specs/architecture/: admin.md  audit-logging.md  auth-rls.md  deploy.md  docker.md  lgpd.md  observability.md  security.md  stack.md
src/sdd_coders/template/specs/functional/: _template.md
src/sdd_coders/wizard/: __init__.py  app.py  launch.py  model.py  pipeline.py  secrets_store.py  themes.py  validators.py  workspace.py
src/sdd_coders/wizard/providers/: __init__.py  ansible.py  cloudflare.py  coolify.py  git.py  github.py  resend.py  terraform.py
tests/: test_adopt.py  test_cli.py
tests/wizard/: conftest.py  test_git.py  test_launch.py  test_model.py  test_pipeline.py  test_providers.py  test_themes.py  test_validators.py  test_workspace_and_secrets.py
(+24 files in other folders)
