[project]
name = "sdd-coders"
version = "0.1.0"
description = "Spec-Driven Development base model: scaffold production-grade fullstack apps (Next.js + FastAPI + Postgres) built by orchestrated AI agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Gabriel Mello", email = "mellogcg@gmail.com" }]
keywords = [
    "spec-driven-development",
    "scaffolding",
    "fullstack",
    "fastapi",
    "nextjs",
    "claude-code",
]
dependencies = [
    "typer>=0.12",
    "copier>=9.3",
]

[project.scripts]
sdd-coders = "sdd_coders.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdd_coders"]

[tool.hatch.build.targets.sdist]
include = ["src/sdd_coders"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# The replicated app template lives under src/sdd_coders/template and is rendered
# by Copier (Jinja); it is not part of the engine's own lint surface.
extend-exclude = ["src/sdd_coders/template"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "SIM", "RUF", "PL", "PT", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PLR2004"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
exclude = ["src/sdd_coders/template"]

[tool.pytest.ini_options]
addopts = "--cov=sdd_coders --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
source = ["sdd_coders"]
branch = true
omit = ["src/sdd_coders/template/*"]

[tool.coverage.report]
show_missing = true
