[project]
name = "app"
version = "0.1.0"
description = "Backend (FastAPI + Pydantic + SQLAlchemy async) with Postgres RLS."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "email-validator>=2.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "argon2-cffi>=23.1",
    "pyjwt>=2.10",
    "python-multipart>=0.0.12",
    "structlog>=24.4",
    "httpx>=0.27",
    "redis>=5.2",
    "aiosmtplib>=3.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "respx>=0.21",
    "fakeredis>=2.26",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "SIM", "RUF", "PL", "PT", "ANN", "ASYNC"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN", "PLR2004", "S105", "S106"]
"alembic/**" = ["ANN", "INP001"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "tests"]
# Backend is a self-contained project; do not walk up into parent packages.
namespace_packages = false
explicit_package_bases = false
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true
# SQLAlchemy's async bridge resumes coroutines inside greenlets; without this,
# lines after an awaited DB call are reported as missed.
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
